--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         <img class="avatar avatar-4" src="assets/girl-3.png" alt="woman with black hair">
       </div>
     </header>
+    <section class="content">
+      <h2 class="content__title">Pincode sign in</h2>
+      <p class="content__text">
+        Enter the pin that you would like to use as<br>
+        login, it's just that simple.
+      </p>
+      <a href="home.html" class="btn" aria-label="Scan fingerprint">
+        <img class="btn__icon" src="assets/security.png" alt="" aria-hidden="true">
+        Scan fingerprint
+      </a>
+    </section>
   </main>
 </body>
 </html>
