add content blocks for home page made at school

--- a/home.html
+++ b/home.html
@@ -21,6 +21,68 @@
         </div>
       </div>
     </header>
+    <main class="content">
+      <section class="block block--split">
+        <div class="text">
+          <h2>Een plek om<br>te laden</h2>
+          <p>
+            Loom biedt zachte rustruimtes waar je kunt ontspannen, lezen
+            of even slapen. een veilige pauze midden in je dag.
+          </p>
+        </div>
+        <div class="media">
+          <img src="assets/image-1.png" alt="">
+        </div>
+      </section>
+      <section class="block block--center">
+        <h3>Ademruimte in je dag</h3>
+        <div class="grid2">
+          <img src="assets/image-2.png" alt="">
+          <img src="assets/image-3.png" alt="">
+        </div>
+        <p class="small">
+          Onze serene ruimtes en rustgevende sessies, zoals
+          ademhalingsoefeningen, helpen je spanning los te laten en opnieuw
+          te focussen.
+        </p>
+      </section>
+      <section class="block block--split">
+        <div class="text">
+          <h2>Waar stilte je<br>draagt</h2>
+          <p>
+            Bij Loom vind je een stille, vertrouwde omgeving waar je je kan
+            terugtrekken en je energie kan herstellen.
+          </p>
+        </div>
+        <div class="media">
+          <img src="assets/image-4.png" alt="">
+        </div>
+      </section>
+      <section class="block block--center">
+        <h3>Zachte pauzen voor<br>een helder hoofd</h3>
+        <div class="grid2">
+          <img src="assets/image-5.png" alt="">
+          <img src="assets/image-6.png" alt="">
+        </div>
+        <p class="small">
+          Of je nu vijf minuten of een uurtje hebt: Loom helpt je te
+          ontprikkelen en terug in balans te komen.
+        </p>
+      </section>
+      <section class="block block--split">
+        <div class="text">
+          <h2>Even weg van<br>de drukte</h2>
+          <p>
+            Stap binnen, vertraag en neem een moment voor jezelf.
+            Loom geeft je de pauze die je nodig hebt.
+          </p>
+        </div>
+        <div class="media">
+          <img src="assets/image-7.png" alt="">
+        </div>
+      </section>
+      <div class="spacer"></div>
+    </main>
   </div>
 </body>
 </html>
