--- a/home.html
+++ b/home.html
@@ -83,6 +83,17 @@
       </section>
       <div class="spacer"></div>
     </main>
+    <nav class="nav" aria-label="bottom navigation">
+      <a class="nav__btn" href="index.html" aria-label="sign in">
+        <img class="nav__icon" src="assets/check-out-icon.png" alt="">
+      </a>
+      <button class="nav__btn is-active" aria-label="home">
+        <img class="nav__icon" src="assets/home-icon.png" alt="">
+      </button>
+      <a class="nav__btn" href="marge.html" aria-label="winkelwagen">
+        <img class="nav__icon" src="assets/shopping-icon-unselected.png" alt="">
+      </a>
+    </nav>
   </div>
 </body>
 </html>
