add content blocks and style for the product page, including images added to the asset map

--- a/marge.html
+++ b/marge.html
@@ -21,6 +21,62 @@
         </div>
       </div>
     </header>
+    <main class="content content--products">
+      <h2 class="products__title">Our products</h2>
+      <div class="products__scroll" aria-label="product cards">
+        <a class="product-card" href="#" aria-label="Bekijk Loom sticker">
+          <img src="assets/image-1-marge.png" alt="Loom sticker">
+        </a>
+        <a class="product-card" href="#" aria-label="Bekijk Loom hoodie">
+          <img src="assets/image-2-marge.png" alt="Loom hoodie">
+        </a>
+        <a class="product-card" href="#" aria-label="Bekijk Loom koffiebeker">
+         <img src="assets/image-3-marge.png" alt="Loom koffiebeker">
+        </a>
+        <a class="product-card" href="#" aria-label="Bekijk Loom earbuds">
+          <img src="assets/image-4-marge.png" alt="Loom earbuds">
+        </a>
+        <a class="product-card" href="#" aria-label="Bekijk Loom slaapmasker">
+          <img src="assets/image-5-marge.png" alt="Loom slaapmasker">
+        </a>
+        <a class="product-card" href="#" aria-label="Bekijk Loom t-shirt">
+          <img src="assets/image-6-marge.png" alt="Loom t-shirt">
+        </a>
+      </div>
+      <div class="product-list" role="list">
+        <a class="product-row" href="#" role="listitem">
+          <img class="product-row__thumb" src="assets/image-1-marge.png" alt="Loom sticker">
+          <span class="product-row__name">Loom sticker</span>
+          <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
+        </a>
+        <a class="product-row" href="#" role="listitem">
+          <img class="product-row__thumb" src="assets/image-2-marge.png" alt="Loom hoodie">
+          <span class="product-row__name">Loom hoodie</span>
+          <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
+        </a>
+        <a class="product-row" href="#" role="listitem">
+          <img class="product-row__thumb" src="assets/image-3-marge.png" alt="Loom Koffiebeker">
+          <span class="product-row__name">Loom Koffiebeker</span>
+          <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
+        </a>
+        <a class="product-row" href="#" role="listitem">
+          <img class="product-row__thumb" src="assets/image-4-marge.png" alt="loom earbuds">
+          <span class="product-row__name">Loom earbuds</span>
+          <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
+        </a>
+        <a class="product-row" href="#" role="listitem">
+          <img class="product-row__thumb" src="assets/image-5-marge.png" alt="Loom slaapmasker">
+          <span class="product-row__name">Loom slaapmasker</span>
+          <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
+        </a>
+        <a class="product-row" href="#" role="listitem">
+          <img class="product-row__thumb" src="assets/image-6-marge.png" alt="Loom t-shirt">
+          <span class="product-row__name">Loom t-shirt</span>
+          <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
+        </a>
+      </div>
+      <div class="spacer"></div>
+    </main>
   </div>
 </body>
 </html>
