--- a/marge.html
+++ b/marge.html
@@ -77,6 +77,17 @@
       </div>
       <div class="spacer"></div>
     </main>
+    <nav class="nav" aria-label="bottom navigation">
+        <a class="nav__btn" href="index.html" aria-label="check out">
+            <img class="nav__icon" src="assets/check-out-icon.png" alt="">
+        </a>
+        <a class="nav__btn" href="home.html" aria-label="home">
+            <img class="nav__icon" src="assets/home-unselected.png" alt="">
+        </a>
+        <button class="nav__btn is-active" aria-label="winkelwagen">
+            <img class="nav__icon" src="assets/shopping-icon.png" alt="">
+        </button>
+    </nav>
   </div>
 </body>
 </html>
