add content block and style for the product detail page 1

--- a/marge-detail__1.html
+++ b/marge-detail__1.html
@@ -21,6 +21,21 @@
         </div>
       </div>
     </header>
+    <main class="content content--detail">
+      <div class="detail__card">
+        <img src="assets/image-1-marge.png" alt="Afbeelding Loom-sticker">
+      </div>
+      <h2 class="detail__title">Loom sticker</h2>
+      <p class="detail__text">
+        Met de Loom-sticker draag je een stukje rust met je mee. Het is een zacht symbool van pauze,
+        balans en zorg voor jezelf — waar je ook gaat, herinnert hij je eraan dat je altijd even mag vertragen.
+      </p>
+      <div class="detail__buy">
+        <span class="detail__price">15€</span>
+        <button class="detail__btn" type="button">In winkelmand</button>
+      </div>
+      <div class="spacer"></div>
+    </main>
   </div>
 </body>
 </html>
