add navigation at the bottom for the product detail page 1, the same as all other pages

--- a/marge-detail__1.html
+++ b/marge-detail__1.html
@@ -36,6 +36,17 @@
       </div>
       <div class="spacer"></div>
     </main>
+    <nav class="nav" aria-label="bottom navigation">
+      <a class="nav__btn" href="index.html" aria-label="uit">
+        <img class="nav__icon" src="assets/check-out-icon.png" alt="">
+      </a>
+      <a class="nav__btn" href="home.html" aria-label="home">
+        <img class="nav__icon" src="assets/home-unselected.png" alt="">
+      </a>
+      <a class="nav__btn is-active" href="marge.html" aria-label="winkelwagen">
+        <img class="nav__icon" src="assets/shopping-icon-unselected.png" alt="">
+      </a>
+    </nav>
   </div>
 </body>
 </html>
