copy HTML code from product detail page 1 to product detail page 4, alt text changed to product detail page 3, and text changed

--- a/marge-detail__4.html
+++ b/marge-detail__4.html
@@ -23,11 +23,11 @@
     </header>
     <main class="content content--detail">
       <div class="detail__card">
-        <img src="assets/image-3-marge.png" alt="Afbeelding Loom-koffiebeker">
+        <img src="assets/image-4-marge.png" alt="Afbeelding Loom-earbuds">
       </div>
-      <h2 class="detail__title">Loom Koffiebeker</h2>
+      <h2 class="detail__title">Loom earbuds</h2>
       <p class="detail__text">
-        De Loom-koffiebeker maakt van elk slokje een mini-pauze. Warm, simpel en rustgevend - een zachte reminder om even te vertragen, waar je dag je ook brengt.
+        Met de Loom-earbuds creëer je je eigen cocon van stilte. Perfect om te ontspannen, te focussen of even weg te dromen - waar je ook bent.
       </p>
       <div class="detail__buy">
         <span class="detail__price">20€</span>
