link pages added to product cards and product rows for marge page

--- a/marge.html
+++ b/marge.html
@@ -24,52 +24,52 @@
     <main class="content content--products">
       <h2 class="products__title">Our products</h2>
       <div class="products__scroll" aria-label="product cards">
-        <a class="product-card" href="#" aria-label="Bekijk Loom sticker">
+        <a class="product-card" href="marge-detail__1.html" aria-label="Bekijk Loom sticker">
           <img src="assets/image-1-marge.png" alt="Loom sticker">
         </a>
-        <a class="product-card" href="#" aria-label="Bekijk Loom hoodie">
+        <a class="product-card" href="marge-detail__2.html" aria-label="Bekijk Loom hoodie">
           <img src="assets/image-2-marge.png" alt="Loom hoodie">
         </a>
-        <a class="product-card" href="#" aria-label="Bekijk Loom koffiebeker">
+        <a class="product-card" href="marge-detail__3.html" aria-label="Bekijk Loom koffiebeker">
          <img src="assets/image-3-marge.png" alt="Loom koffiebeker">
         </a>
-        <a class="product-card" href="#" aria-label="Bekijk Loom earbuds">
+        <a class="product-card" href="marge-detail__4.html" aria-label="Bekijk Loom earbuds">
           <img src="assets/image-4-marge.png" alt="Loom earbuds">
         </a>
-        <a class="product-card" href="#" aria-label="Bekijk Loom slaapmasker">
+        <a class="product-card" href="marge-detail__5.html" aria-label="Bekijk Loom slaapmasker">
           <img src="assets/image-5-marge.png" alt="Loom slaapmasker">
         </a>
-        <a class="product-card" href="#" aria-label="Bekijk Loom t-shirt">
+        <a class="product-card" href="marge-detail__6.html" aria-label="Bekijk Loom t-shirt">
           <img src="assets/image-6-marge.png" alt="Loom t-shirt">
         </a>
       </div>
       <div class="product-list" role="list">
-        <a class="product-row" href="#" role="listitem">
+        <a class="product-row" href="marge-detail__1.html" role="listitem">
           <img class="product-row__thumb" src="assets/image-1-marge.png" alt="Loom sticker">
           <span class="product-row__name">Loom sticker</span>
           <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
         </a>
-        <a class="product-row" href="#" role="listitem">
+        <a class="product-row" href="marge-detail__2.html" role="listitem">
           <img class="product-row__thumb" src="assets/image-2-marge.png" alt="Loom hoodie">
           <span class="product-row__name">Loom hoodie</span>
           <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
         </a>
-        <a class="product-row" href="#" role="listitem">
+        <a class="product-row" href="marge-detail__3.html" role="listitem">
           <img class="product-row__thumb" src="assets/image-3-marge.png" alt="Loom Koffiebeker">
           <span class="product-row__name">Loom Koffiebeker</span>
           <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
         </a>
-        <a class="product-row" href="#" role="listitem">
+        <a class="product-row" href="marge-detail__4.html" role="listitem">
           <img class="product-row__thumb" src="assets/image-4-marge.png" alt="loom earbuds">
           <span class="product-row__name">Loom earbuds</span>
           <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
         </a>
-        <a class="product-row" href="#" role="listitem">
+        <a class="product-row" href="marge-detail__5.html" role="listitem">
           <img class="product-row__thumb" src="assets/image-5-marge.png" alt="Loom slaapmasker">
           <span class="product-row__name">Loom slaapmasker</span>
           <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
         </a>
-        <a class="product-row" href="#" role="listitem">
+        <a class="product-row" href="marge-detail__6.html" role="listitem">
           <img class="product-row__thumb" src="assets/image-6-marge.png" alt="Loom t-shirt">
           <span class="product-row__name">Loom t-shirt</span>
           <span class="product-row__arrow" aria-hidden="true"><img src="assets/next-icon.png" alt="Arrow right"></span>
@@ -79,13 +79,13 @@
     </main>
     <nav class="nav" aria-label="bottom navigation">
         <a class="nav__btn" href="index.html" aria-label="check out">
-            <img class="nav__icon" src="assets/check-out-icon.png" alt="">
+            <img class="nav__icon" src="assets/check-out-icon.png" alt="check out icon">
         </a>
         <a class="nav__btn" href="home.html" aria-label="home">
-            <img class="nav__icon" src="assets/home-unselected.png" alt="">
+            <img class="nav__icon" src="assets/home-unselected.png" alt="home icon">
         </a>
         <button class="nav__btn is-active" aria-label="winkelwagen">
-            <img class="nav__icon" src="assets/shopping-icon.png" alt="">
+            <img class="nav__icon" src="assets/shopping-icon.png" alt="shopping icon">
         </button>
     </nav>
   </div>
