add content block and style for the payment page

--- a/payment.html
+++ b/payment.html
@@ -21,6 +21,25 @@
         </div>
       </div>
     </header>
+    <main class="content content--payment">
+      <h1 class="pay__title">Betalen</h1>
+      <section class="pay__section">
+        <h2 class="pay__h2">Bestelling</h2>
+        <article class="order-card">
+          <img class="order-card__img" src="assets/image-2-marge.png" alt="Loom hoodie">
+          <div class="order-card__info">
+            <div class="order-card__name">Loom hoodie</div>
+            <div class="order-card__meta">M</div>
+            <div class="order-card__meta">Aantal: 1</div>
+          </div>
+          <div class="order-card__price">€45,00</div>
+        </article>
+        <div class="order-total">
+          <span>Totaal</span>
+          <strong>€45,00</strong>
+        </div>
+      </section>
+    </main>
 </div>
 </body>
 </html>
