add form and style for the payment page

--- a/payment.html
+++ b/payment.html
@@ -39,6 +39,41 @@
           <strong>€45,00</strong>
         </div>
       </section>
+      <section class="pay__section">
+        <h2 class="pay__h2">Bezorging</h2>
+        <form class="form">
+          <label class="field">
+            <span class="field__label">Naam</span>
+            <input class="field__input" type="text" placeholder="vb.Miguel">
+          </label>
+          <label class="field">
+            <span class="field__label">Adres</span>
+            <input class="field__input" type="text" placeholder="vb.Kompaniestraat 32">
+          </label>
+          <div class="form__row">
+            <label class="field">
+              <span class="field__label">Postcode</span>
+              <input class="field__input" type="text" placeholder="vb.3271">
+            </label>
+            <label class="field">
+              <span class="field__label">Plaats</span>
+              <input class="field__input" type="text" placeholder="vb.Zichem">
+            </label>
+          </div>
+        </form>
+      </section>
+      <section class="pay__section">
+        <h2 class="pay__h2">Betaalmethode</h2>
+        <label class="paymethod">
+          <input type="radio" name="pay" checked>
+          <span>iDEAL</span>
+        </label>
+        <label class="paymethod">
+          <input type="radio" name="pay">
+          <span>Creditcard</span>
+        </label>
+      </section>
+      <button class="pay__cta" type="button">Afrekenen</button>
     </main>
 </div>
 </body>
