add navigation at the bottom for the payment page

--- a/payment.html
+++ b/payment.html
@@ -75,6 +75,17 @@
       </section>
       <button class="pay__cta" type="button">Afrekenen</button>
     </main>
+    <nav class="nav" aria-label="bottom navigation">
+      <a class="nav__btn" href="index.html" aria-label="sign in">
+        <img class="nav__icon" src="assets/check-out-icon.png" alt="">
+      </a>
+      <button class="nav__btn is-active" aria-label="home">
+        <img class="nav__icon" src="assets/home-unselected.png" alt="">
+      </button>
+      <a class="nav__btn" href="marge.html" aria-label="winkelwagen">
+        <img class="nav__icon" src="assets/shopping-icon-unselected.png" alt="">
+      </a>
+    </nav>
 </div>
 </body>
 </html>
