--- a/payment.html
+++ b/payment.html
@@ -79,9 +79,9 @@
       <a class="nav__btn" href="index.html" aria-label="sign in">
         <img class="nav__icon" src="assets/check-out-icon.png" alt="">
       </a>
-      <button class="nav__btn is-active" aria-label="home">
+     <a class="nav__btn" href="home.html" aria-label="home">
         <img class="nav__icon" src="assets/home-unselected.png" alt="">
-      </button>
+      </a>
       <a class="nav__btn" href="marge.html" aria-label="winkelwagen">
         <img class="nav__icon" src="assets/shopping-icon-unselected.png" alt="">
       </a>
