add an id to the marge detail pages

--- a/marge-detail__3.html
+++ b/marge-detail__3.html
@@ -31,7 +31,7 @@
       </p>
       <div class="detail__buy">
         <span class="detail__price">20€</span>
-        <button class="detail__btn" type="button">In winkelmand</button>
+        <button id="winkelmand" class="detail__btn" type="button">In winkelmand</button>
       </div>
       <div class="spacer"></div>
     </main>
