--- a/marge-detail__6.html
+++ b/marge-detail__6.html
@@ -38,7 +38,7 @@
       </ul>
       <div class="detail__buy">
         <span class="detail__price">15€</span>
-        <button class="detail__btn" type="button">In winkelmand</button>
+        <button id="winkelmand" class="detail__btn" type="button">In winkelmand</button>
       </div>
       <div class="spacer"></div>
     </main>
