changed JavaScript code and  the id to a class in the marge detail 1 page

--- a/marge-detail__1.html
+++ b/marge-detail__1.html
@@ -33,7 +33,7 @@
       </p>
       <div class="detail__buy">
         <span class="detail__price">15€</span>
-        <button id="winkelmand" class="detail__btn" type="button">In winkelmand</button>
+        <button class="detail__btn winkelmand" type="button">In winkelmand</button>
       </div>
       <div class="spacer"></div>
     </main>
