changed the winkelman- id into a class in all the marge detail pages

--- a/marge-detail__5.html
+++ b/marge-detail__5.html
@@ -6,6 +6,7 @@
   <title>Loom detail pagina</title>
   <link href="https://db.onlinewebfonts.com/c/1dc7840abb13fcda12aa8d1cb21fb832?family=Agrandir" rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" href="style.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
   <div class="app">
@@ -31,7 +32,7 @@
       </p>
       <div class="detail__buy">
         <span class="detail__price">15€</span>
-        <button id="winkelmand" class="detail__btn" type="button">In winkelmand</button>
+        <button class="detail__btn winkelmand" type="button">In winkelmand</button>
       </div>
       <div class="spacer"></div>
     </main>
